# smactory

./: .coverage  .gitignore  .pre-commit-config.yaml  AI-First GitHub & VS Code Setup.md  LICENSE  README.md  _config.yml  ai-native-gap-remediation-plan.md  awesome-ai-native-integration-plan.md  bootstrap.sh  constitution_prompt.md  pyproject.toml  setup_secrets.py  speckit.sh
.devcontainer/: devcontainer.json  docker-compose.dev.yml  init-db.sql  post-create.sh  postCreateCommand.sh
.devcontainer/.devcontainer/: docker-compose.dev.yml
.github/: copilot-instructions.md
.github/chatmodes/: architect.chatmode.md  documenter.chatmode.md  journaler.chatmode.md  qa_engineer.chatmode.md  refactor.chatmode.md  tester.chatmode.md
.github/instructions/: python.instructions.md
.github/prompts/: create-pytest-unit-tests.prompt.md  doc.prompt.md  explain.prompt.md  fix-bug.prompt.md  generate-tests.prompt.md  refactor.prompt.md
.github/workflows/: cleanup-branches.yml  quality-assurance.yml
.specify/: plan.template.md  spec.template.md  tasks.template.md
.specify/journals/: 2025-10-16-session.md
.specify/memory/: constitution.md  context.md
docs/: branch-cleanup.md
src/: math_utils.py
tests/: conftest.py  test_math_utils.py  test_speckit.py
