[project]  
name = "ai-native-project"  
version = "0.1.0"  
description = "A template repository for AI-Native development."  
authors = []
requires-python = ">=3.10"  
license = { text = "MIT" }  
classifiers = []

[project.dependencies]  
# Add your core project dependencies here  
# Example:  
# fastapi = "^0.104.1"  
# pydantic = "^2.5.2"

[project.optional-dependencies]  
dev = [  
    "ruff",  
    "mypy",  
    "pytest",  
    "pytest-cov",  
]

[build-system]  
requires = ["setuptools>=61.0"]  
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------  
# Tool Configuration  
# -------------------------------------------------------------------

[tool.ruff]  
# Set the maximum line length.  
line-length = 120

# Assume Python 3.11 compatibility.  
target-version = "py311"

# Enable a broad set of rules by default, then selectively ignore.  
# See https://docs.astral.sh/ruff/rules/ for a full list.  
select = []
ignore = []

# Exclude commonly ignored directories.  
exclude = [  
    ".bzr",  
    ".direnv",  
    ".eggs",  
    ".git",  
    ".hg",  
    ".mypy_cache",  
    ".nox",  
    ".pants.d",  
    ".pytype",  
    ".ruff_cache",  
    ".svn",  
    ".tox",  
    ".venv",  
    "__pypackages__",  
    "_build",  
    "buck-out",  
    "build",  
    "dist",  
    "node_modules",  
    "venv",  
]

[tool.ruff.format]  
# Use black-compatible formatting.  
quote-style = "double"  
indent-style = "space"  
skip-magic-trailing-comma = false  
line-ending = "auto"

[tool.mypy]  
python_version = "3.11"  
warn_return_any = true  
warn_unused_configs = true  
ignore_missing_imports = true  
strict = true

[[tool.mypy.overrides]]  
module = "tests.*"  
allow_untyped_defs = true

[tool.pytest.ini_options]  
minversion = "6.0"  
addopts = "-ra -q --cov=src --cov-report=term-missing"  
testpaths = [  
    "tests",  
]
